syntax = "proto3";

package grpc_service;
option go_package = "./grpc_service/proto";

/* get */
message GetRequest {
}

message GetResponse {
  string str_v = 1;
  bool bool_v =2;
  map<int64, int64> arr_v = 3;
}

/* set */
message SetRequest {
  string str_v = 1;
  bool bool_v =2;
  map<int64, int64> arr_v = 3;
}

message SetResponse {
  string str_v = 1;
  bool bool_v =2;
  map<int64, int64> arr_v = 3;
}

/* Service */
service GrpcService {
  rpc GetSettings (GetRequest) returns (GetResponse);
  rpc SetSettings (SetRequest) returns (SetResponse);
}